# garfish-wasm-esm-plugin

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.zig  build.zig.zon  package.json  pnpm-lock.yaml  rollup.config.mjs  tsconfig.lib.json  vitest.config.ts
.changeset/: add-tests-benchmarks.md  config.json  consume-entry-esm-preloads.md  external-prefix-matching.md  fix-live-bindings.md  instantiate-cyclic-exports.md  precompile-runtime-modules.md  release-automation.md  resolve-cyclic-module-graphs.md  runtime-compile-cache-resources.md  runtime-race-fixes.md  test-beta-release.md  visible-async-esm-errors.md  zig-yuku-transformer.md
.github/workflows/: release.yml
benchmarks/: parse.md  parse.zig  transform.md
examples/vite/: index.html  subapp.html  vite.config.ts
examples/vite/src/: main.ts  styles.css  sub-dependency.ts  subapp.ts
scripts/: apply-pr-beta-version.mjs  benchmark-parse.mjs  benchmark-transform.mjs  changeset-has-release.mjs  comment-pr-beta-release.mjs  comment-pr-quality-report.mjs  package-wasm.mjs  update-coverage-badge.mjs
src/: compiled-module.ts  compiler.ts  index.ts  lib.rs  module.ts  pluginify.ts  preloads.ts  runtime-entry.ts  runtime.ts  transformer.zig  vite.ts  wasm.ts
tests/: module.test.ts  pluginify.test.ts  runtime.test.ts  setup.ts  transform.test.ts  wasm.ts
wasm/: garfish_wasm_esm_plugin.d.ts  garfish_wasm_esm_plugin.js  garfish_wasm_esm_plugin_bg.wasm.d.ts
